Fix form labels spacing

--- a/app/assets/styles/explore/_output.scss
+++ b/app/assets/styles/explore/_output.scss
@@ -91,6 +91,7 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-start;
+    margin: 0;
 
     .form__option__text {
       order: -1;
